<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Bottom Navigation Bar Menu - Adventure Escape SA
    Persistent navigation between Home, Overview, Calculate, and Contact.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/ic_nav_overview"
        android:title="@string/nav_overview" />

    <item
        android:id="@+id/nav_calculate"
        android:icon="@drawable/ic_nav_calculate"
        android:title="@string/nav_calculate" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_nav_contact"
        android:title="@string/nav_contact" />
</menu>
